--- a/Chaveiro 24 horas.html
+++ b/Chaveiro 24 horas.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html><html lang="en-US"><head>
+<!DOCTYPE html><html lang="pt-BR"><head>
 	<meta charset="UTF-8">
-			<title>Baltimore – Welcome</title>
+			<title>Chaveiro rapido - 24/7</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="max-image-preview:large">
-<title>Baltimore – Welcome</title>
+<title>Chaveiro rapido São Paulo</title>
 <link rel="alternate" type="application/rss+xml" title="Welcome » Feed" href="https://i2RbqidLDqPb.com/feed/">
 <link rel="alternate" type="application/rss+xml" title="Welcome » Comments Feed" href="https://i2RbqidLDqPb.com/comments/feed/">
 <script async="" src="0p1sp1hYrOzD.com/gtm_id%3DGTM-TJ77558K.js"></script><script>
@@ -353,7 +353,7 @@ body.elementor-page .elementor-widget-menu-anchor{margin-bottom:0}</style>		<div
 								<li class="elementor-icon-list-item">
 											<span class="elementor-icon-list-icon">
 							<svg aria-hidden="true" class="e-font-icon-svg e-fas-cog" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="M487.4 315.7l-42.6-24.6c4.3-23.2 4.3-47 0-70.2l42.6-24.6c4.9-2.8 7.1-8.6 5.5-14-11.1-35.6-30-67.8-54.7-94.6-3.8-4.1-10-5.1-14.8-2.3L380.8 110c-17.9-15.4-38.5-27.3-60.8-35.1V25.8c0-5.6-3.9-10.5-9.4-11.7-36.7-8.2-74.3-7.8-109.2 0-5.5 1.2-9.4 6.1-9.4 11.7V75c-22.2 7.9-42.8 19.8-60.8 35.1L88.7 85.5c-4.9-2.8-11-1.9-14.8 2.3-24.7 26.7-43.6 58.9-54.7 94.6-1.7 5.4.6 11.2 5.5 14L67.3 221c-4.3 23.2-4.3 47 0 70.2l-42.6 24.6c-4.9 2.8-7.1 8.6-5.5 14 11.1 35.6 30 67.8 54.7 94.6 3.8 4.1 10 5.1 14.8 2.3l42.6-24.6c17.9 15.4 38.5 27.3 60.8 35.1v49.2c0 5.6 3.9 10.5 9.4 11.7 36.7 8.2 74.3 7.8 109.2 0 5.5-1.2 9.4-6.1 9.4-11.7v-49.2c22.2-7.9 42.8-19.8 60.8-35.1l42.6 24.6c4.9 2.8 11 1.9 14.8-2.3 24.7-26.7 43.6-58.9 54.7-94.6 1.5-5.5-.7-11.3-5.6-14.1zM256 336c-44.1 0-80-35.9-80-80s35.9-80 80-80 80 35.9 80 80-35.9 80-80 80z"></path></svg>						</span>
-										<span class="elementor-icon-list-text">Smart Locks &amp; Keyless Entry</span>
+										<span class="elementor-icon-list-text">Troca de segredo &amp; fechadura</span>
 									</li>
 						</ul>
 				</div>
@@ -507,7 +507,7 @@ body.elementor-page .elementor-widget-menu-anchor{margin-bottom:0}</style>		<div
 				<div class="elementor-widget-container">
 			<style>
 .elementor-widget-google_maps .elementor-widget-container{overflow:hidden}.elementor-widget-google_maps .elementor-custom-embed{line-height:0}.elementor-widget-google_maps iframe{height:300px}</style>		<div class="elementor-custom-embed">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d29252.44511785398!2d-46.62279966921504!3d-23.584397692153342!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce5bfaa685824b%3A0xbedefcc57d08d534!2sIpiranga%2C%20S%C3%A3o%20Paulo%20-%20State%20of%20S%C3%A3o%20Paulo%2C%20Brazil!5e0!3m2!1sen!2sus!4v1717267857342!5m2!1sen!2sus" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+			<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d14628.714387677832!2d-46.657109333591755!3d-23.562028310787536!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59b756463d61%3A0x9f3d1e6f7f40964!2sBela%20Vista%2C%20S%C3%A3o%20Paulo%20-%20State%20of%20S%C3%A3o%20Paulo%2C%20Brazil!5e0!3m2!1sen!2sus!4v1717280896691!5m2!1sen!2sus" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 		</div>
 				</div>
 				</div>
