--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html lang="pt-BR"><head>
 	<meta charset="UTF-8">
-			<title>Chaveiro rapido - 24/7</title>
+			<title>Chaveiro São Paulo Mais Próximo - 24 Horas</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="robots" content="max-image-preview:large">
 <title>Chaveiro rapido São Paulo</title>
